Add Submit button to form

--- a/views/form.pug
+++ b/views/form.pug
@@ -8,3 +8,4 @@ html(lang='en')
       input(type='text' name='name' id='name')
       label(for='message') Message:
       textarea(id='message')
+      button Submit Message
