Add some basic CSS

--- a/views/form.pug
+++ b/views/form.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang='en')
   head
     title #{'New Message'}
+    link(rel='stylesheet' href='/stylesheets/style.css')
   body   
     form(action='/new' method='POST')
       label(for='name') Enter your name:
