--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,9 @@ ul {
 
 li {
   border: 2px solid black;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  width: 30%;
+  padding-left: 5px;
 }
 
 a {
@@ -19,4 +21,10 @@ a {
 form {
   display: flex;
   flex-direction: column;
+  width: 30vw;
+}
+
+form button {
+  width: 50%;
+  margin: 2vh auto;
 }
