Add link to go back to home page

--- a/views/form.pug
+++ b/views/form.pug
@@ -4,6 +4,7 @@ html(lang='en')
     title #{'New Message'}
     link(rel='stylesheet' href='/stylesheets/style.css')
   body   
+    a(href='/..') < Back to Home Page
     form(action='/new' method='POST')
       label(for='name') Enter your name:
       input(type='text' name='name' id='name')
