--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ li {
   margin-bottom: 10px;
   width: 30%;
   padding-left: 5px;
-}
+}s
 
 a {
   color: #00B7FF;
@@ -22,6 +22,7 @@ form {
   display: flex;
   flex-direction: column;
   width: 30vw;
+  margin-top: 2vh;
 }
 
 form button {
