--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,6 @@ html(lang='en')
       each message in messages
         li
           p= message.text
-          p= message.user
-          p= message.added
+          p #[span(class='user') #{message.user}]
+          p #[span(class='date') #{message.added}]
     a(href='/new') New Message
