--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,10 +12,15 @@ li {
   margin-bottom: 10px;
   width: 30%;
   padding-left: 5px;
-}s
+}
 
 a {
   color: #00B7FF;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 form {
